--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,3 @@
-
 name: toy-gnn
 channels:
   - pytorch
@@ -7,8 +6,23 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - pytorch
-  - pytorch-geometric
-  - pip
+  - pytorch>=1.9.0
+  # - torch-geometric>=2.0.0
+  - pyg>=2.0.0
+  - numpy>=1.19.0
+  - scikit-learn>=0.24.0
+  - matplotlib>=3.3.0
+  - seaborn>=0.11.0
+  # Development dependencies
+  - pytest>=6.0.0
+  - black>=22.0.0
+  - flake8>=3.9.0
+  - jupyter>=1.0.0
+  - ipython>=7.0.0
+  - notebook>=6.0.0
+  # Build dependencies
+  - setuptools>=45.0.0
+  - wheel>=0.36.0
+  - pip>=21.0.0
   - pip:
     - -e .
